[package]
name = "papier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = { version = "1.10.1", default-features = false }
env_logger = "0.11.8"
image = { version = "0", default-features = false, features = ["jpeg"] }
log = "0.4.28"
reqwest = "0"
rustix = { version = "1", default-features = false, features = ["mm", "std"] }
tokio = { version = "1", default-features = false, features = [
  "rt",
  "net",
  "sync",
  "time",
  "macros",
] }
wayland-client = { version = "*", default-features = false }
wayland-protocols = { version = "*", default-features = false, features = [
  "client",
  "staging",
  "unstable",
] }
wayland-protocols-wlr = { version = "*", default-features = false, features = [
  "client",
] }
