[package]
name = "papier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = { version = "1.10", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "now",
] }
env_logger = "0.11"
image = { version = "0", default-features = false, features = ["jpeg"] }
log = "0.4"
reqwest = "0"
rustix = { version = "1", default-features = false, features = ["mm", "std"] }
tokio = { version = "1", default-features = false, features = [
  "rt",
  "net",
  "sync",
  "time",
  "macros",
  "parking_lot",
] }
wayland-client = { version = "*", default-features = false }
wayland-protocols = { version = "*", default-features = false, features = [
  "client",
  "staging",
  "unstable",
] }
wayland-protocols-wlr = { version = "*", default-features = false, features = [
  "client",
] }
